fixing some spacing issues on mobile

--- a/public/stylesheets/bootstrap/sass/bootstrap/_modals.scss
+++ b/public/stylesheets/bootstrap/sass/bootstrap/_modals.scss
@@ -231,10 +231,10 @@
 
   &.right {
     position: absolute;
-    right: 15%;
+    right: 35%;
   }
   &.left {
     position: absolute;
-    left: 15%;
+    left: 35%;
   }
 }
